--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="home-section3-container">
                     <p class="home-section3-head">The 5 Elements</p>
-                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet<br><br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
+                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.<br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
 
                 </div>
             </div>
@@ -249,7 +249,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="home-section3-container">
                     <p class="home-section3-head">Our Story</p>
-                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet<br><br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
+                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidun.<br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
 
                 </div>
             </div>
@@ -270,7 +270,7 @@
                         <img src="assets/home/section5/1.jpg" alt="test">
                     </div>
                     <h3 class="box-title">It's All About You!</h3>
-                    <p class="box-text">We get that you want to be the best,<br> every moment of the day. We strongly believe<br> in creating unique and personalised packages<br> because of the differences in <br>our lifestyles and goals.</p>
+                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
                 </div>
             </div>
             <div class="col-sm-4">
