--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3"></div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div>
-                            <p class="landingpage-head">Hello!<br> Welcome to TSCO.</p>
+                            <p class="landingpage-head">Hello! Welcome to TSCO.</p>
                             <h3>No more bitter herbal brews or weird pungent oils. We’re more than just a traditional chinese medicine brand. We believe in giving you the boosts you need to bring out the best in you, every single day.</h3>
                         </div>
                     </div>
@@ -298,13 +298,13 @@
 
     <!-- Section 5 -->
 
-
  
 
     <!-- End Of Section 5 -->
 
-
-    <!-- Section 6 -->
+	
+	
+<!-- Section 6 -->
 
 
     <div class="container-fluid section6-space">
@@ -566,6 +566,7 @@
 
 
     <!-- End of Section 6 -->
+    
 
 
     <!-- Footer-->
