--- a/index.html
+++ b/index.html
@@ -97,214 +97,8 @@
  <!-- End Floating Help Button -->
 
 
-        <!-- Landing Page -->
-            <div class="container-fluid landingpage">
-                <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-3"></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div>
-                            <p class="landingpage-head">Hello! Welcome to TSCO.</p>
-                            <h3>No more bitter herbal brews or weird pungent oils. We’re more than just a traditional chinese medicine brand. We believe in giving you the boosts you need to bring out the best in you, every single day.</h3>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3"></div>
-                </div>
-            </div>
 
-<a href="#" class="scroll-down" address="true"></a>
-
-
-    <!-- End Landing Page -->
-
-    <!-- Section 1 -->
-
-    <div class="container-fluid home-section3">
-        <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3"></div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="home-section3-container">
-                    <p class="home-section3-head">The 5 Elements</p>
-                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.<br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
-
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3"></div>
-        </div>
-
-    </div>
-
-
-<div class="container">
-         <div class="hidden-xs home-section2-containercarousel">
-  <div class="home-section2-elementbox element-1">
-        <p class="home-section2-elementhead">Earth</p>
-    <div class="home-section2-elementicon">
-        <img src="assets/general/earth-icon.png" width="150px">
-    </div>
-    <p class="home-section2-elementbody">
-            Earth types are well grounded and nurturing.<br>Compassionate and 
-            good mediators. They<br>should be conscious of overeating that may<br>
-            lead to obesity or diabetes.
-    </p>
-            <div class="home-section2-elementtag"><br>
-            <p class="home-section2-elementsmall">Meridian:<br>
-            heart, small intestine</p>
-            <strong>Creative</strong><br>
-            <strong>Energetic</strong><br>
-            <strong>Charismatic</strong>
-        </div>
- <button type="button" class="btn btn-primary nav-btn section2-btn ">Learn More</button>
-
-  </div>
-
-  <div class="home-section2-elementbox element-2">
-        <p class="home-section2-elementhead">Water</p>
-    <div class="home-section2-elementicon">
-        <img src="assets/general/water-icon.png" width="150px">
-    </div>
-     <p class="home-section2-elementbody">
-            Those of the water energy are clever and<br>introspective. 
-            They are critical and seek<br>knowledge and understanding.<br>
-            &nbsp;
-    </p>
-            <div class="home-section2-elementtag">
-            <br>
-            <p class="home-section2-elementsmall">Meridian:<br>
-            heart, small intestine</p>
-            <strong>Creative</strong><br>
-            <strong>Energetic</strong><br>
-            <strong>Charismatic</strong>
-        </div>
- <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
-  </div>
-
-  <div class='home-section2-elementbox element-3'>
-    <p class="home-section2-elementhead">Fire</p>
-    <div class="home-section2-elementicon">
-    <img src="assets/general/fire-icon.png" width="150px">
-    </div>
-    <p class="home-section2-elementbody">
-            People of the fire element are often<br>charismatic and make great leaders.<br>
-            Frequent exercise and stress management <br> is recommended to help them relax.
-    </p>
-        <div class="home-section2-elementtag"><br>
-            <p class="home-section2-elementsmall">Meridian:<br>
-            heart, small intestine</p>
-            <strong>Creative</strong><br>
-            <strong>Energetic</strong><br>
-            <strong>Charismatic</strong>
-        </div>
-	  <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
-  </div>
-
-  <div class='home-section2-elementbox element-4'>
-        <p class="home-section2-elementhead">Wood</p>
-
-    <div class="home-section2-elementicon">
-        <img src="assets/general/wood-icon.png" width="150px">
-    </div>
-    <p class="home-section2-elementbody">
-            Wood elements are organised, balanced and<br> decisive. They have clear vision and goals. 
-            <br>They are seldom overweight due to their fast metabolsms.&nbsp;
-    </p>
-            <div class="home-section2-elementtag"><br>
-            <p class="home-section2-elementsmall">Meridian:<br>
-            liver, gallbladder</p>
-            <strong>Creative</strong><br>
-            <strong>Energetic</strong><br>
-            <strong>Charismatic</strong>
-        </div>
-
-	  <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
-	  
-  </div>
-
-  <div class='home-section2-elementbox element-5'>
-        <p class="home-section2-elementhead">Metal</p>
-    <div class="home-section2-elementicon">
-        <img src="assets/general/metal-icon.png" width="150px">
-    </div>
-    <p class="home-section2-elementbody">
-            The metal element is self disciplined and live<br> their life arccording to reason and principle.
-            They are prone to asthma, constipation <br> and joint problems.<br>&nbsp;
-    </p>
-            <div class="home-section2-elementtag"><br>
-            <p class="home-section2-elementsmall">Meridian:<br>
-            lungs, large intestine</p>
-            <strong>Disciplined</strong><br>
-            <strong>Passionate</strong><br>
-        </div>
-<button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button></div>
-</div>
-</div>
-   
-
-    <!-- End Section 2 5 Elements Carousel -->
-
-    <!-- Section 3 -->
-
-    <div class="container-fluid home-section3">
-        <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3"></div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="home-section3-container">
-                    <p class="home-section3-head">Our Story</p>
-                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidun.<br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
-
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3"></div>
-        </div>
-
-    </div>
-
-    <!-- End Section 3 -->
-
-    <!-- Section 4 -->
-
-    <div class="container">
-        <div class="row section4-container">
-            <div class="col-sm-4">
-                <div class="section4-box text-center">
-                    <div class="home-section4-image">
-                        <img src="assets/home/section5/1.jpg" alt="test">
-                    </div>
-                    <h3 class="box-title">It's All About You!</h3>
-                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="section4-box text-center">
-                    <div class="home-section4-image">
-                        <img src="assets/home/section5/2.jpg" alt="test">
-                    </div>
-                    <h3 class="box-title">Honesty and Quality</h3>
-                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="section4-box text-center">
-                    <div class="home-section4-image">
-                        <img src="assets/home/section5/3.jpg" alt="test">
-                    </div>
-                    <h3 class="box-title">History</h3>
-                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
-                </div>
-                </div>
-            </div>
-        </div>
-
-    <!-- End Of Section 4 -->
-
-    <!-- Section 5 -->
-
- 
-
-    <!-- End Of Section 5 -->
-
-	
-	
-<!-- Section 6 -->
+	<!-- Section 6 -->
 
 
     <div class="container-fluid section6-space">
@@ -566,6 +360,200 @@
 
 
     <!-- End of Section 6 -->
+	
+	
+	 <!-- Section 3 -->
+
+    <div class="container-fluid home-section3">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3"></div>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="home-section3-container">
+                    <p class="home-section3-head">What is TSCO Herbal Bar?</p>
+                    <p class="home-section3-body">No more bitter herbal brews or strange pungent oils. We're more than just a traditional Chinese medicine brand. With our next generation TCM formulas and flavours, We believe in giving you the boosts you need to bring out the best in yourself every day.</p>
+
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3"></div>
+        </div>
+
+    </div>
+
+    <!-- End Section 3 -->
+
+    <!-- Section 4 -->
+
+    <div class="container">
+        <div class="row section4-container">
+            <div class="col-sm-4">
+                <div class="section4-box text-center">
+                    <div class="home-section4-image">
+                        <img src="assets/home/section5/1.jpg" alt="test">
+                    </div>
+                    <h3 class="box-title">It's All About You!</h3>
+                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="section4-box text-center">
+                    <div class="home-section4-image">
+                        <img src="assets/home/section5/2.jpg" alt="test">
+                    </div>
+                    <h3 class="box-title">Honesty and Quality</h3>
+                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="section4-box text-center">
+                    <div class="home-section4-image">
+                        <img src="assets/home/section5/3.jpg" alt="test">
+                    </div>
+                    <h3 class="box-title">History</h3>
+                    <p class="box-text">Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod</p>
+                </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- End Of Section 4 -->
+
+		
+
+    <!-- Section 1 -->
+
+    <div class="container-fluid home-section3">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3"></div>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="home-section3-container">
+                    <p class="home-section3-head">The 5 Elements</p>
+                    <p class="home-section3-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.<br> Genuine Advice. Finer Ingredients. Personalized for you.</p>
+
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3"></div>
+        </div>
+
+    </div>
+
+
+<div class="container">
+         <div class="hidden-xs home-section2-containercarousel">
+  <div class="home-section2-elementbox element-1">
+        <p class="home-section2-elementhead">Earth</p>
+    <div class="home-section2-elementicon">
+        <img src="assets/general/earth-icon.png" width="150px">
+    </div>
+    <p class="home-section2-elementbody">
+            Earth types are well grounded and nurturing.<br>Compassionate and 
+            good mediators. They<br>should be conscious of overeating that may<br>
+            lead to obesity or diabetes.
+    </p>
+            <div class="home-section2-elementtag"><br>
+            <p class="home-section2-elementsmall">Meridian:<br>
+            heart, small intestine</p>
+            <strong>Creative</strong><br>
+            <strong>Energetic</strong><br>
+            <strong>Charismatic</strong>
+        </div>
+ <button type="button" class="btn btn-primary nav-btn section2-btn ">Learn More</button>
+
+  </div>
+
+  <div class="home-section2-elementbox element-2">
+        <p class="home-section2-elementhead">Water</p>
+    <div class="home-section2-elementicon">
+        <img src="assets/general/water-icon.png" width="150px">
+    </div>
+     <p class="home-section2-elementbody">
+            Those of the water energy are clever and<br>introspective. 
+            They are critical and seek<br>knowledge and understanding.<br>
+            &nbsp;
+    </p>
+            <div class="home-section2-elementtag">
+            <br>
+            <p class="home-section2-elementsmall">Meridian:<br>
+            heart, small intestine</p>
+            <strong>Creative</strong><br>
+            <strong>Energetic</strong><br>
+            <strong>Charismatic</strong>
+        </div>
+ <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
+  </div>
+
+  <div class='home-section2-elementbox element-3'>
+    <p class="home-section2-elementhead">Fire</p>
+    <div class="home-section2-elementicon">
+    <img src="assets/general/fire-icon.png" width="150px">
+    </div>
+    <p class="home-section2-elementbody">
+            People of the fire element are often<br>charismatic and make great leaders.<br>
+            Frequent exercise and stress management <br> is recommended to help them relax.
+    </p>
+        <div class="home-section2-elementtag"><br>
+            <p class="home-section2-elementsmall">Meridian:<br>
+            heart, small intestine</p>
+            <strong>Creative</strong><br>
+            <strong>Energetic</strong><br>
+            <strong>Charismatic</strong>
+        </div>
+	  <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
+  </div>
+
+  <div class='home-section2-elementbox element-4'>
+        <p class="home-section2-elementhead">Wood</p>
+
+    <div class="home-section2-elementicon">
+        <img src="assets/general/wood-icon.png" width="150px">
+    </div>
+    <p class="home-section2-elementbody">
+            Wood elements are organised, balanced and<br> decisive. They have clear vision and goals. 
+            <br>They are seldom overweight due to their fast metabolsms.&nbsp;
+    </p>
+            <div class="home-section2-elementtag"><br>
+            <p class="home-section2-elementsmall">Meridian:<br>
+            liver, gallbladder</p>
+            <strong>Creative</strong><br>
+            <strong>Energetic</strong><br>
+            <strong>Charismatic</strong>
+        </div>
+
+	  <button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button>
+	  
+  </div>
+
+  <div class='home-section2-elementbox element-5'>
+        <p class="home-section2-elementhead">Metal</p>
+    <div class="home-section2-elementicon">
+        <img src="assets/general/metal-icon.png" width="150px">
+    </div>
+    <p class="home-section2-elementbody">
+            The metal element is self disciplined and live<br> their life arccording to reason and principle.
+            They are prone to asthma, constipation <br> and joint problems.<br>&nbsp;
+    </p>
+            <div class="home-section2-elementtag"><br>
+            <p class="home-section2-elementsmall">Meridian:<br>
+            lungs, large intestine</p>
+            <strong>Disciplined</strong><br>
+            <strong>Passionate</strong><br>
+        </div>
+<button type="button" class="btn btn-primary nav-btn section2-btn">Learn More</button></div>
+</div>
+</div>
+   
+
+    <!-- End Section 2 5 Elements Carousel -->
+
+   
+    <!-- Section 5 -->
+
+ 
+
+    <!-- End Of Section 5 -->
+
+	
+	
+
     
 
 
