--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
             <div class="row">
                 <div class="col-xs-12">
                  <label class="section6-modal-quiztitle">What is your gender?</label>
-                    <select name="selectgender" class="form-control section6-modal-quiztitle" tabindex="4">
+                    <select class="form-control tabindex="4">
                   <option value="">Select your gender</option>
-                  <option>Female</option>
-                  <option>Male</option>
-                  <option>I rather not say</option>
+                  <option value="">Female</option>
+                  <option value="">Male</option>
+                  <option value="">I rather not say</option>
                 </select>
                </div>
              </div>
@@ -248,7 +248,7 @@
             <div class="row">
                 <div class="col-xs-12">
                  <label class="section6-modal-quiztitle">What are your concerns?</label>
-                    <select name="selectgender" class="form-control section6-modal-quiztitle" tabindex="4">
+                    <select class="form-control tabindex="4">
                   <option value="">Do you have any concerns?</option>
                   <option>I have been feeling tired all the time lately</option>
                   <option>I have been feeling slightly under the weather</option>
