--- a/quiz-summary.html
+++ b/quiz-summary.html
@@ -104,7 +104,7 @@
         <div class="summary-yourelement col-sm-5">
 			<p class="summary-hellojohn"><b>Hello John,<br>Your element is Earth.</b></p>
 			<p class="summary-yourelementbody">No more bitter herbal brews or weird pungent oils. We're more
-			than just a traditional chinese medicine brand.We believe in giving you the boosts<br>  you need to bring out the best in you, every single day</p><br>
+			than just a traditional chinese medicine brand.We believe in giving you the boosts you need to bring out the best in you, every single day</p><br>
 	
 			<button type="button" class="btn btn-primary summary-btn">
 			Learn More About The Elements
