--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   <option value="">Select your gender</option>
                   <option value="">Female</option>
                   <option value="">Male</option>
-                  <option value="">I rather not say</option>
+                  <option value="">Other</option>
                 </select>
                </div>
              </div>
